--- a/src/app/std/sheet/[id]/style.css
+++ b/src/app/std/sheet/[id]/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial, sans-serif;
-    max-width: 800px;
+    /* max-width: 800px;
     margin: 20px auto;
-    padding: 5px;
+    padding: 5px; */
 }
 
 .report-card {
